--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,1 +1,12 @@
-$side-padding: 8px 10px;
+$side-padding: 8px 10px 2px 8px;
+
+$header-menu-height: 65px;
+$header-toolbar-height: 40px;
+
+$border-buttom: 1px solid #ddd;
+
+$page-width: 800px;
+$page-height: 1150px;
+
+$ruler-height: 15px;
+$ruler-pointer-width: $page-width / 21;
