--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,11 @@
-@import "./header";
+@import "./basic";
 @import "./resize";
 @import "./blocks";
-// @import "./mixins";
+
+@import "./common";
+@import "./header";
+@import "./header-menu";
+@import "./header-toolbar";
+@import "./workpace";
+@import "./ruler";
+@import "./page";
